# asp_lib

./: .gitignore  Cargo.toml  README.md  SYSTEM_SPEC.md  install.sh  pyproject.toml  rust_worker.Dockerfile
.github/workflows/: ci.yml  release.yml
benchmarks_and_figures/: main.tex  testing_claude.py  validate_asp_suite.py
go_services/: docker-compose.yml
go_services/cmd/orbit_dispatch/: Dockerfile  main.go
go_services/proto/: asp_cluster.proto
python/asp/: __asp_core.pyi  __init__.py
python/asp/math/: riemann.py
python/asp/navigation/: sc_ekf.py  tad_cpe.py
python/asp/orchestrator/: apc.py  asp_cluster_pb2.py  asp_cluster_pb2_grpc.py  borel_plane.py  cluster_api.py  solver.py
python/asp/physics/: floer.py
python/asp/symbolic/: bender_wu.py  codegen.py  lindstedt.py  transseries.py
src/: borel_pade.rs  build.rs  lib.rs  picard_spec.rs  resurgent_ps.rs
src/math/: apc.rs  borel_pade.rs  chebyshev.rs  interval.rs  mod.rs
src/physics/: constrain_uk.rs  ks_cr3bp.rs  lifting.rs  mod.rs  tad_cpe.rs
src/solvers/: mod.rs  picard.rs  stm.rs
tests/: test_apc_cluster.py  test_core.py  test_resurgent_ps.py
