[package]
name = "asp_core"
version = "0.1.0"
edition = "2021"
description = "Core computational engine for Analytic Structural Physics"

[lib]
name = "asp_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = "0.15"
rustdct = "0.7"