[package]
name = "asp_core"
version = "0.1.0"
edition = "2021"
description = "Core computational engine for Analytic Structural Physics"

[lib]
name = "asp_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = "0.15"
rustdct = "0.7"
lazy_static = "1.4"
nalgebra = "0.32"
num-complex = "0.4"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "asp-physics"
version = "0.1.0"
description = "Analytic Structural Physics: Spectral Astrodynamics and Resurgence Theory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "sympy>=1.12",
    "grpcio>=1.50",
    "protobuf>=4.21"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "asp._asp_core"