[package]
name = "asp_core"
version = "0.1.0"
edition = "2021"
description = "Core computational engine for Analytic Structural Physics"

[lib]
name = "asp_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = "0.15"
rustdct = "0.7"
lazy_static = "1.4"
nalgebra = "0.32"
num-complex = "0.4"
tonic        = "0.10"
prost        = "0.12"
tokio        = { version = "1.35", features = ["macros", "rt-multi-thread"] }
rayon        = "1.8"

[build-dependencies]
tonic-build  = "0.10"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"
required-features = ["grpc-worker"]

[features]
grpc-worker = ["prost", "tokio", "rayon"]